--- a/css/style.css
+++ b/css/style.css
@@ -9665,20 +9665,41 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 
+/* colores */
+/* estilo de los elementos HTML */
 h1 {
-  color: blue;
+  padding: 1.5rem 0;
+  font-size: 2.2rem;
+}
+
+@media screen and (min-width: 720px) {
+  h1 {
+    font-size: 4rem;
+  }
 }
 
 header {
   background: lightgray;
 }
 
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 15vh;
+  background-color: black;
+  color: white;
+}
+
+/*Estilo banners */
 .banner, .bannerBienvenida {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-size: cover;
+  padding: 1.5rem;
   width: 100%;
 }
 
@@ -9698,12 +9719,73 @@ header {
   height: 50vh;
 }
 
-footer {
-  background-color: lightskyblue;
-  height: 15vh;
+/* formas de envio */
+.formasEnvioContainer {
+  display: flex;
+  flex-direction: row;
+  background-color: lightgrey;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 30vh;
 }
 
-/** estilo de texto*/
+.infoContainer {
+  /*   background-color: lightgrey;*/
+}
+
+.infoItem {
+  /*    border: 1px solid black;*/
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0 1rem;
+  border-bottom: 2px solid grey;
+}
+
+.infoItem img {
+  width: 8rem;
+}
+
+.infoItem div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.infoItem div h4 {
+  font-size: 1.2rem;
+}
+
+.infoItem div h5 {
+  font-size: 1rem;
+}
+
+/* Estilo del resumen de la compra */
+.resumenCompra {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 500px;
+  width: 100%;
+  background-color: #aab8ff;
+}
+
+/* estilo de texto*/
 .precio {
   font-size: 1.8rem;
+}
+
+/* estilo de cartas */
+.amd {
+  border-left: 3px solid #dd0000;
+}
+
+.intel {
+  border-left: 3px solid #2209df;
+}
+
+.ambasMarcas {
+  border-left: 3px solid #515151;
 }
