--- a/css/style.css
+++ b/css/style.css
@@ -9719,20 +9719,6 @@ footer {
   height: 50vh;
 }
 
-/* formas de envio */
-.formasEnvioContainer {
-  display: flex;
-  flex-direction: row;
-  background-color: lightgrey;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 30vh;
-}
-
-.infoContainer {
-  /*   background-color: lightgrey;*/
-}
-
 .infoItem {
   /*    border: 1px solid black;*/
   display: flex;
@@ -9762,14 +9748,35 @@ footer {
   font-size: 1rem;
 }
 
+/*Estilo de los logos*/
+.logoRedSocial img {
+  filter: brightness(0) invert(1);
+}
+
 /* Estilo del resumen de la compra */
 .resumenCompra {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 500px;
   width: 100%;
   background-color: #aab8ff;
+}
+
+.productosResumen {
+  display: flex;
+  flex-direction: column;
+}
+
+.separador {
+  border-bottom: 2px solid #555;
+  margin: 0.8rem;
+}
+
+.fotoCarrito {
+  width: 64px;
+}
+
+@media screen and (min-width: 720px) {
+  .fotoCarrito {
+    width: 128px;
+  }
 }
 
 /* estilo de texto*/
@@ -9788,4 +9795,21 @@ footer {
 
 .ambasMarcas {
   border-left: 3px solid #515151;
+}
+
+.inputCantidadContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.inputCantidadContainer label {
+  font-size: 1.4rem;
+  padding-right: 1rem;
+  font-weight: 500;
+}
+
+.inputCantidadContainer input {
+  max-width: 25%;
 }
