--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,20 +54,10 @@ footer{
     height: 50vh;
 }
 
-/* formas de envio */
-
 .formasEnvioContainer{
-    display: flex;
-    flex-direction: row;
-    background-color: lightgrey;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 30vh;
 }
 
-.infoContainer{
- /*   background-color: lightgrey;*/
-}
+
 
 .infoItem{
 /*    border: 1px solid black;*/
@@ -96,14 +86,41 @@ footer{
 
 
 
+/*Estilo de los logos*/
+
+.logoRedSocial{
+    img{
+        filter: brightness(0) invert(1);
+        // padding: 0.5rem 2rem;
+        // background-color: red;
+    }
+}
+
 /* Estilo del resumen de la compra */
+
 .resumenCompra{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 500px;
     width: 100%;
     background-color: $colorPrincipal;
+}
+
+.productosResumen{
+    display: flex;
+    flex-direction: column;
+}
+
+.separador{
+    border-bottom: 2px solid #555;
+    margin: 0.8rem;
+}
+
+.fotoCarrito{
+    width: 64px;
+}
+
+@media screen and (min-width: 720px){
+    .fotoCarrito{
+        width: 128px;
+    }
 }
 
 /* estilo de texto*/
@@ -126,5 +143,19 @@ footer{
     border-left: 3px solid rgb(81, 81, 81);
 }
 
+.inputCantidadContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    label{
+        font-size: 1.4rem;
+        padding-right: 1rem;
+        font-weight: 500;
+    }
+    input{
+        max-width: 25%;
+    }
+}
 
 
