--- a/css/style.css
+++ b/css/style.css
@@ -9759,24 +9759,61 @@ footer {
   background-color: #aab8ff;
 }
 
-.productosResumen {
+.resumenCompra h4 {
+  font-size: 1rem;
+}
+
+/*nuevo maquetado carrito*/
+.resumenCompraContainer {
+  background-color: lightblue;
+}
+
+.resumenDetalles {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
+  border-top: 2px solid #000000;
+  padding-top: 0.7rem;
+}
+
+@media screen and (min-width: 720px) {
+  .resumenDetalles {
+    border-top: none;
+    border-left: 2px solid #000000;
+    padding-top: 0;
+    margin-left: 0.4rem;
+  }
+}
+
+.carritoContainer {
+  display: row;
+  flex-direction: column;
+  background-color: red;
+}
+
+.productoCarrito {
+  display: flex;
+  align-items: center;
+}
+
+.productoCarrito img {
+  width: 64px;
+  margin-right: 1em;
+}
+
+.productoCarrito h6 {
+  color: #444;
+}
+
+@media screen and (min-width: 720px) {
+  .productoCarrito img {
+    width: 256px;
+  }
 }
 
 .separador {
   border-bottom: 2px solid #555;
   margin: 0.8rem;
-}
-
-.fotoCarrito {
-  width: 64px;
-}
-
-@media screen and (min-width: 720px) {
-  .fotoCarrito {
-    width: 128px;
-  }
 }
 
 /* estilo de texto*/
