quitar del carrito y mejoras visuales

--- a/css/style.css
+++ b/css/style.css
@@ -9689,7 +9689,7 @@ footer {
   justify-content: center;
   height: 15vh;
   background-color: black;
-  color: white;
+  color: #ffffff;
 }
 
 /*Estilo banners */
@@ -9720,13 +9720,12 @@ footer {
 }
 
 .infoItem {
-  /*    border: 1px solid black;*/
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   padding: 0 1rem;
-  border-bottom: 2px solid grey;
+  border-bottom: 2px solid #666;
 }
 
 .infoItem img {
@@ -9753,19 +9752,9 @@ footer {
   filter: brightness(0) invert(1);
 }
 
-/* Estilo del resumen de la compra */
-.resumenCompra {
-  width: 100%;
-  background-color: #aab8ff;
-}
-
-.resumenCompra h4 {
-  font-size: 1rem;
-}
-
 /*nuevo maquetado carrito*/
 .resumenCompraContainer {
-  background-color: lightblue;
+  background: linear-gradient(to right bottom, #b5cfff, #a3c3fe, #92b7fd, #80abfc, #6d9ffb);
 }
 
 .resumenDetalles {
@@ -9774,6 +9763,7 @@ footer {
   justify-content: space-evenly;
   border-top: 2px solid #000000;
   padding-top: 0.7rem;
+  max-height: 500px;
 }
 
 @media screen and (min-width: 720px) {
@@ -9783,37 +9773,12 @@ footer {
     padding-top: 0;
     margin-left: 0.4rem;
   }
-}
-
-.carritoContainer {
-  display: row;
-  flex-direction: column;
-  background-color: red;
-}
-
-.productoCarrito {
-  display: flex;
-  align-items: center;
-}
-
-.productoCarrito img {
-  width: 64px;
-  margin-right: 1em;
-}
-
-.productoCarrito h6 {
-  color: #444;
-}
-
-@media screen and (min-width: 720px) {
-  .productoCarrito img {
-    width: 256px;
+  .resumenDetalles h4 {
+    font-size: 1.8rem;
   }
-}
-
-.separador {
-  border-bottom: 2px solid #555;
-  margin: 0.8rem;
+  .resumenDetalles span {
+    font-size: 1.4rem;
+  }
 }
 
 /* estilo de texto*/
@@ -9821,7 +9786,7 @@ footer {
   font-size: 1.8rem;
 }
 
-/* estilo de cartas */
+/* estilo de cartas (por ahora sin usar) */
 .amd {
   border-left: 3px solid #dd0000;
 }
