--- a/scss/style.css
+++ b/scss/style.css
@@ -10851,7 +10851,7 @@ footer {
           justify-content: center;
   height: 15vh;
   background-color: black;
-  color: white;
+  color: #ffffff;
 }
 
 /*Estilo banners */
@@ -10891,7 +10891,6 @@ footer {
 }
 
 .infoItem {
-  /*    border: 1px solid black;*/
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10905,7 +10904,7 @@ footer {
       -ms-flex-align: center;
           align-items: center;
   padding: 0 1rem;
-  border-bottom: 2px solid grey;
+  border-bottom: 2px solid #666;
 }
 
 .infoItem img {
@@ -10942,19 +10941,10 @@ footer {
           filter: brightness(0) invert(1);
 }
 
-/* Estilo del resumen de la compra */
-.resumenCompra {
-  width: 100%;
-  background-color: #aab8ff;
-}
-
-.resumenCompra h4 {
-  font-size: 1rem;
-}
-
 /*nuevo maquetado carrito*/
 .resumenCompraContainer {
-  background-color: lightblue;
+  background: -webkit-gradient(linear, left top, right bottom, from(#b5cfff), color-stop(#a3c3fe), color-stop(#92b7fd), color-stop(#80abfc), to(#6d9ffb));
+  background: linear-gradient(to right bottom, #b5cfff, #a3c3fe, #92b7fd, #80abfc, #6d9ffb);
 }
 
 .resumenDetalles {
@@ -10970,6 +10960,7 @@ footer {
           justify-content: space-evenly;
   border-top: 2px solid #000000;
   padding-top: 0.7rem;
+  max-height: 500px;
 }
 
 @media screen and (min-width: 720px) {
@@ -10979,44 +10970,12 @@ footer {
     padding-top: 0;
     margin-left: 0.4rem;
   }
-}
-
-.carritoContainer {
-  display: row;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  background-color: red;
-}
-
-.productoCarrito {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.productoCarrito img {
-  width: 64px;
-  margin-right: 1em;
-}
-
-.productoCarrito h6 {
-  color: #444;
-}
-
-@media screen and (min-width: 720px) {
-  .productoCarrito img {
-    width: 256px;
+  .resumenDetalles h4 {
+    font-size: 1.8rem;
   }
-}
-
-.separador {
-  border-bottom: 2px solid #555;
-  margin: 0.8rem;
+  .resumenDetalles span {
+    font-size: 1.4rem;
+  }
 }
 
 /* estilo de texto*/
@@ -11024,7 +10983,7 @@ footer {
   font-size: 1.8rem;
 }
 
-/* estilo de cartas */
+/* estilo de cartas (por ahora sin usar) */
 .amd {
   border-left: 3px solid #dd0000;
 }
