segunda entrega proyecto

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,11 @@
 /* colores */
 
 $colorPrincipal: rgb(170, 184, 255);
+$colorFondo: #eeeeee;
+$colorHeader: rgb(211,211,211);
+$colorIntel: rgb(34, 9, 223);
+$colorAmd: rgb(221, 0, 0);
+$blanco: #ffffff;
+$negro: #000000;
+$grisMedio: rgb(81, 81, 81);
 $colorFooter: rgb(0,0,0);
