--- a/css/style.css
+++ b/css/style.css
@@ -9678,6 +9678,10 @@ h1 {
   }
 }
 
+body {
+  background-color: #eeeeee;
+}
+
 header {
   background: lightgray;
 }
@@ -9725,7 +9729,7 @@ footer {
   justify-content: space-around;
   align-items: center;
   padding: 0 1rem;
-  border-bottom: 2px solid #666;
+  border-bottom: 2px solid #515151;
 }
 
 .infoItem img {
@@ -9752,9 +9756,10 @@ footer {
   filter: brightness(0) invert(1);
 }
 
-/*nuevo maquetado carrito*/
+/*Carrito de productos*/
 .resumenCompraContainer {
-  background: linear-gradient(to right bottom, #b5cfff, #a3c3fe, #92b7fd, #80abfc, #6d9ffb);
+  background-color: #ffffff;
+  box-shadow: 1px 2px 6px #515151;
 }
 
 .resumenDetalles {
@@ -9771,7 +9776,6 @@ footer {
     border-top: none;
     border-left: 2px solid #000000;
     padding-top: 0;
-    margin-left: 0.4rem;
   }
   .resumenDetalles h4 {
     font-size: 1.8rem;
@@ -9781,12 +9785,26 @@ footer {
   }
 }
 
+.productoCarrito {
+  border-bottom: 1px solid #515151;
+  margin: 0 1rem;
+}
+
+.productoCarrito img {
+  background-color: #ffffff;
+}
+
 /* estilo de texto*/
 .precio {
   font-size: 1.8rem;
 }
 
-/* estilo de cartas (por ahora sin usar) */
+.numeroPedido {
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+
+/* estilo de cartas productos */
 .amd {
   border-left: 3px solid #dd0000;
 }
