--- a/css/style.css
+++ b/css/style.css
@@ -9759,16 +9759,31 @@ footer {
 /*Carrito de productos*/
 .resumenCompraContainer {
   background-color: #ffffff;
-  box-shadow: 1px 2px 6px #515151;
+}
+
+@media screen and (min-width: 720px) {
+  .resumenCompraContainer {
+    box-shadow: 1px 2px 6px #515151;
+  }
 }
 
 .resumenDetalles {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  border-top: 2px solid #000000;
-  padding-top: 0.7rem;
-  max-height: 500px;
+  height: 300px;
+}
+
+.resumenDetalles h4 {
+  font-size: 1.8rem;
+}
+
+.resumenDetalles span {
+  font-size: 1.2rem;
+}
+
+.resumenDetalles button {
+  min-height: 50px;
 }
 
 @media screen and (min-width: 720px) {
