--- a/scss/style.scss
+++ b/scss/style.scss
@@ -97,16 +97,28 @@ footer{
 
 .resumenCompraContainer{
     background-color: $blanco;
-    box-shadow: 1px 2px 6px $grisMedio;
+}
+
+@media screen and (min-width: 720px){
+    .resumenCompraContainer{
+        box-shadow: 1px 2px 6px $grisMedio; 
+    }
 }
 
 .resumenDetalles{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    border-top: 2px solid $negro;
-    padding-top: 0.7rem;
-    max-height: 500px;
+    height: 300px;
+    h4{
+        font-size: 1.8rem;
+    }
+    span{
+        font-size: 1.2rem;
+    }
+    button{
+        min-height: 50px;
+    }
 }
 
 @media screen and (min-width: 720px){
